--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@fortawesome/react-fontawesome": "^0.2.6",
         "@headlessui/react": "^2.0.0",
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
@@ -23,6 +24,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-pro": "file:resources/fonts/fortawesome-fontawesome-pro-5.15.4.tgz",
         "react": "^19.1.0",
         "react-dom": "^19.1.0"
     }
