--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.24",
         "laravel/tinker": "^2.10.1",
+        "socialiteproviders/discord": "^4.2",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
