Database configuration ready for class bias tool

--- a/.env.example
+++ b/.env.example
@@ -64,6 +64,12 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+BLIZZARD_CLIENT_ID=
+BLIZZARD_CLIENT_SECRET=
+BLIZZARD_REGION=eu
+BLIZZARD_LOCALE=en_GB
+BLIZZARD_FILESYSTEM=public
+
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 DISCORD_BOT_TOKEN=
