Add jobs for background data processing

--- a/.env.example
+++ b/.env.example
@@ -74,4 +74,10 @@ DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 DISCORD_BOT_TOKEN=
 DISCORD_REDIRECT_URI="${APP_URL}/auth/discord/callback"
-DISCORD_GUILD_ID=
+DISCORD_CHANNEL_ANNOUNCEMENTS=
+DISCORD_CHANNEL_OFFICER=
+
+WCL_CLIENT_ID=
+WCL_CLIENT_SECRET=
+
+TMB_GUILD_ID=
