--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@fortawesome/fontawesome-pro": "file:resources/fonts/fortawesome-fontawesome-pro-5.15.4.tgz",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "react-markdown": "^10.1.0"
+        "react-markdown": "^10.1.0",
+        "wow-model-viewer": "^1.1.2"
     }
 }
