--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,7 @@ DISCORD_CLIENT_SECRET=
 DISCORD_BOT_TOKEN=
 DISCORD_REDIRECT_URI="${APP_URL}/auth/discord/callback"
 DISCORD_CHANNEL_ANNOUNCEMENTS=
+DISCORD_CHANNEL_LOOTCOUNCIL=
 DISCORD_CHANNEL_OFFICER=
 
 WCL_CLIENT_ID=
