--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.10.1",
         "league/flysystem-aws-s3-v3": "^3.0",
         "socialiteproviders/discord": "^4.2",
+        "spatie/laravel-permission": "^7.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
