--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
+HORIZON_NAME="Horizon"
+HORIZON_DOMAIN="horizon.${APP_URL}"
+HORIZON_PATH=
+HORIZON_PREFIX=
+
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
