--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_DOMAIN=localhost
+APP_URL="http://${APP_DOMAIN}"
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -14,11 +15,6 @@ APP_MAINTENANCE_DRIVER=file
 PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
-
-HORIZON_NAME="Horizon"
-HORIZON_DOMAIN="horizon.${APP_URL}"
-HORIZON_PATH=
-HORIZON_PREFIX=
 
 LOG_CHANNEL=stack
 LOG_STACK=single
@@ -51,6 +47,11 @@ REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+HORIZON_NAME="Horizon"
+HORIZON_DOMAIN="horizon.${APP_DOMAIN}"
+HORIZON_PATH=
+HORIZON_PREFIX=
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
