--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "fakerphp/faker": "^1.23",
         "laravel/boost": "^1.8",
         "laravel/breeze": "^2.3",
+        "laravel/dusk": "^8.3",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.51",
